Fix homepage overflow

--- a/source/assets/stylesheets/templates/_index.scss
+++ b/source/assets/stylesheets/templates/_index.scss
@@ -8,6 +8,7 @@
     margin-bottom: 30px;
     // background: image-url('index/hero.svg') no-repeat center center;
     background-size: auto 300px;
+    overflow-x: hidden;
     svg { height: 300px; }
 
     @include media($tablet) {
